[metadata]
name = snlc
author = Marten H. van Kerkwijk
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://github.com/mhvk/snlc
description = Semianalytic supernova lightcurves
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/snlc

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    astropy>=4.3
    scipy
    matplotlib

[options.extras_require]
test =
    pytest-astropy-header
    pytest-doctestplus
    pytest-openfiles

[tool:pytest]
testpaths = "snlc"
astropy_header = true
astropy_header_packages =
    astropy
    numpy
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --doctest-ignore-import-errors
filterwarnings =
  error
  ignore:::pytest_doctestplus
  ignore:numpy.ufunc size changed:RuntimeWarning
  ignore:numpy.ndarray size changed:RuntimeWarning

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    snlc/conftest.py,snlc/version.py,snlc/__init__.py,
    snlc/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    snlc/conftest.py,snlc/version.py,snlc/__init__.py,
    snlc/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
